syntax = "proto3";

package protocol;

message CMD_GW {
    enum ENUM {
        INVALID = 0;                        // 未定义
        RELAY_CLIENT_MSG = 1;               // 中继客户端消息 ( GATEWAY -> S )
    }
}

// 中继客户端消息 ( GATEWAY -> S )
message MSG_GW_RELAY_CLIENT_MSG {
    string Account = 1;                     // 账号
    uint32 CMD = 2;                         // 消息号（真实消息号，已脱掉消息偏移量）
    bytes Data = 3;                         // 数据
}
